@@ -1,11 +1,13 @@
 package com.tongthuan.webdothethao_backend.service.serviceImpl;
 
+import com.tongthuan.webdothethao_backend.dto.response.AdminResponse.TopBuyerResponse;
 import com.tongthuan.webdothethao_backend.dto.response.AdminResponse.UserStatsResponse;
 import com.tongthuan.webdothethao_backend.entity.Users;
 import com.tongthuan.webdothethao_backend.repository.UsersRepository;
 import com.tongthuan.webdothethao_backend.service.serviceInterface.UsersService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -15,8 +17,8 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UsersServiceImpl implements UsersService {
@@ -58,11 +60,11 @@ public class UsersServiceImpl implements UsersService {
         Long currentTotal = usersRepository.countByMonthAndYear(currentMonth, currentYear);
         Long total = usersRepository.countAll();
 
-        Long lastMonthTotal = total - currentTotal;
+        long lastMonthTotal = total - currentTotal;
 
         double percentChange = 0.0;
         if (lastMonthTotal != 0) {
-            percentChange = ((double)(total - lastMonthTotal) / lastMonthTotal) * 100;
+            percentChange = ((double) (total - lastMonthTotal) / lastMonthTotal) * 100;
         } else if (currentTotal > 0) {
             percentChange = 100.0;
         }
@@ -74,13 +76,25 @@ public class UsersServiceImpl implements UsersService {
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
 
         Users user = usersRepository.findByUserName(username).orElse(null);
-        if(user == null)
-        {
+        if (user == null) {
             throw new UsernameNotFoundException("Khong tim thay nguoi dung");
         }
-        List<GrantedAuthority> roles = Arrays.asList(new SimpleGrantedAuthority(user.getRole().name()));
-        User user1 = new User(user.getUserName(),user.getPassword(),roles);
+        List<GrantedAuthority> roles = List.of(new SimpleGrantedAuthority(user.getRole().name()));
 
-        return user1;
+        return new User(user.getUserName(), user.getPassword(), roles);
+    }
+
+    @Override
+    public Page<TopBuyerResponse> findTopBuyer(Pageable pageable) {
+        Page<Object[]> result = usersRepository.findTopBuyer(pageable);
+
+        List<TopBuyerResponse> content = result.stream()
+                .map(row -> new TopBuyerResponse(
+                        (Users) row[0],
+                        (Long) row[1]
+                ))
+                .collect(Collectors.toList());
+
+        return new PageImpl<>(content, pageable, result.getTotalElements());
     }
 }
